BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/DCR_Field_Type_vod__c.object
<CustomObject>
    <description>Indicates DCR controlled fields and fields those changes need to be sent to Network</description>
    <fields>
        <fullName>Country_vod__c</fullName>
        <description>ISO 3166-1 alpha-2 country code.</description>
        <label>Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID for use in data loading and migration.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field_API_Name_vod__c</fullName>
        <description>CRM field name</description>
        <label>Field API Name</label>
        <length>43</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type_vod__c</fullName>
        <description>Indicates field type</description>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>Read_Only_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Editable_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCR_Editable_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCR_vod</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DCR_Required_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCR_Editable_Required_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Object_API_Name_vod__c</fullName>
        <description>CRM object API name</description>
        <label>Object API Name</label>
        <length>43</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_ID_vod__c</fullName>
        <description>ID of User Profile to which this record applies. If blank, acts as default value for un-specified profiles.</description>
        <label>Profile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name_vod__c</fullName>
        <description>User profile name. Line applicable for all user profiles if field is empty. Populated by trigger from Profile field.</description>
        <label>Profile Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_vod__c</fullName>
        <description>CRM object record type. Value must be the un-translated Record Type Label.</description>
        <label>Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Key_vod__c</fullName>
        <description>Unique key that prevents duplicates. Concatenation of following values:
Country, User Profile Name, Object API Name, Record Type Name, Field API Name</description>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DCR Field Type</label>
    <listViews>
        <fullName>DCR_Field_Types_BMS_EU</fullName>
        <columns>NAME</columns>
        <columns>Country_vod__c</columns>
        <columns>Field_API_Name_vod__c</columns>
        <columns>Field_Type_vod__c</columns>
        <columns>Object_API_Name_vod__c</columns>
        <columns>Record_Type_vod__c</columns>
        <columns>Unique_Key_vod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_vod__c</field>
            <operation>notEqual</operation>
            <value>GC,SA,DZ,TN,MA,ZA,MB</value>
        </filters>
        <label>DCR Field Types (EU)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DCR_Field_Types_BMS_MEA</fullName>
        <columns>NAME</columns>
        <columns>Country_vod__c</columns>
        <columns>Field_API_Name_vod__c</columns>
        <columns>Field_Type_vod__c</columns>
        <columns>Object_API_Name_vod__c</columns>
        <columns>Record_Type_vod__c</columns>
        <columns>Unique_Key_vod__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_vod__c</field>
            <operation>equals</operation>
            <value>GC,SA,DZ,TN,MA,ZA,MB</value>
        </filters>
        <label>DCR Field Types (MEA)</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DCRF{000000000}</displayFormat>
        <label>DCR Field Type ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCR Field Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>